Bug 350219 - Kmail can't create IMAP top level folders
Summary: Kmail can't create IMAP top level folders
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 5.5.1
Platform: Neon Linux
: NOR critical
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-14 19:42 UTC by Tom Chiverton
Modified: 2017-09-08 23:18 UTC (History)
19 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom Chiverton 2015-07-14 19:42:27 UTC
Try to right click on the imap account name/folder and there will be no "Add folder" entry.

Reproducible: Always

Steps to Reproduce:
Try to right click on the imap account name/folder and there will be no "Add folder" entry.

Actual Results:  
No add folder entry

Expected Results:  
Add folder entry
Comment 1 Nick 2015-09-11 15:16:51 UTC
Can confirm. You can actually create a top level folder though Akonadi Console. Also if you rename the account in Kmail it will work for a short period of time before breaking again.
Comment 2 Tom Chiverton 2015-09-11 16:43:41 UTC
Ack, Kubuntu 15.04
Comment 3 Bruno Friedmann 2015-09-11 20:14:06 UTC
This one is a duplicate of https://bugs.kde.org/show_bug.cgi?id=292418 
Let redo the work here if it's what devs want.
The status is over over over confirmed, and has nothing to do with kubuntu package, this bug is availiable in almost all flavor of linux distribution.
openSUSE, fedora, debian, kubuntu, arch linux etc ...
Comment 4 Nick 2015-09-11 23:26:21 UTC
That one is closed as fixed and it doesn't look like anyone is going to reopen it.
Comment 5 Timothy Murphy 2015-09-11 23:29:27 UTC
I don't understand why the same bug was marked as FIXED, and now a new bug report has been opened concerning exactly the same problem.
The statement that the bug was FIXED is manifestly false, since there are reports virtually every month since January 2012 confirming the problem.
Also if the problem cannot be solved, the akonadi console workaround should be made available to KMail users, eg by adding it to the KMail Handbook.
Comment 6 Kai Petzke 2015-09-12 08:34:14 UTC
I can confirm this bug for Kubuntu 15.04. The workaround using the akonadi console is somewhat useable, but this bug should be fixed, nonetheless.
Comment 7 mrpaul 2015-10-08 11:30:29 UTC
Confirmed on Arch

After a fresh install It was functioning for some hours. I this short time I succeeded in adding several top level folders. However that was yesterday. Today the functionality has strangly dissapeared and I am no longer able to add top level folders. Very dissapointed. This is very important to me.

Something in the background is clearly messing things up. I suspect akonadi and or its database.

Previously I could not add top level folders and somehow my sql database was getting errors. I cleaned up by deleteing the sql database and removing the akonadi folder in my home dir forcing akonadi to recreate everything. After this, to my delight,  the ability to add top level folders returned. The joy was however short lived. It has gone again and I'm not going to hose my database every time I want to add a folder.

Please change the status of this bug to confirmed. Considering the impact of this bug on kmails overall usability, it should, in my opinion, be considered high priority.

KMail 5.0.1
KDE Frameworks 5.14.0
Qt 5.5.0 (built against 5.5.0)
The xcb windowing system
4.2.2-1-ARCH
akonadi 15.08.1-1
Comment 8 jos poortvliet 2015-12-15 14:09:50 UTC
Same on openSUSE Tumbleweed, but KMail version 4.14.10
Platform Version 4.14.14
Qt4 4.8.7
(Qt5Core 5.5.1)
I also, as added fun, suddenly can't access my Inbox anymore. It has disappeared from my favorites and is greyed out. This started, like, 1 minute ago, I was just doing a search and replied to an email.
Comment 9 Florian Jacob 2016-05-10 08:55:21 UTC
*** This bug has been confirmed by popular vote. ***
Comment 10 Bruno Friedmann 2016-07-11 20:22:04 UTC
Still true with a dovecot 2.2 imap serveur ( roundcube and thunderbird work well in this use case)

Kmail 
Using: 5.2.2
KDE Frameworks 5.23.0
Qt 5.6.1 (built against 5.6.1)
The xcb windowing system

Should we increase the version in the bug report ?
Comment 11 Tom Chiverton 2016-08-10 18:34:12 UTC
Yes, you should bump the version to the latest to try and get some traction.

For what it is worth, Kontact 5.1.3 in Kubuntu 16.04 LTS still has this critical bug.
Comment 12 Bruno Friedmann 2016-08-10 18:53:30 UTC
Even 5.2.3 on openSUSE TW has still this trouble.
Comment 13 Juha Tuomala 2016-08-24 14:27:27 UTC
Confirmed. New manually created dovecot maildir folder doesn't appear either, regardless what I try.
Comment 14 Tristan Miller 2016-10-03 19:36:21 UTC
(In reply to Juha Tuomala from comment #13)
> Confirmed. New manually created dovecot maildir folder doesn't appear
> either, regardless what I try.

I can't create top-level IMAP folders either (KMail 5.3.0).  If I create the folder in another e-mail client, it doesn't appear immediately in KMail (even if in the "Manage Local Subscriptions" dialog).  However, going offline via File->Work Offline and then back online again makes the new folders visible.
Comment 15 Andreas K. Huettel 2017-01-31 14:51:44 UTC
Same effect on Gentoo, kmail 5.4.1

New top-level IMAP folders cannot be created in kmail / kontact. 
Creating one in akonadiconsole works fine.

Updating the bug data to show it's still current / applicable
Comment 16 Tristan Miller 2017-02-01 07:13:17 UTC
(In reply to Andreas K. Huettel from comment #15)
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>             Version|5.1.3                       |5.4.1
>
> Updating the bug data to show it's still current / applicable

Does it not make more sense for the version field to list the *earliest* known version in which the bug occurs?
Comment 17 Tom Chiverton 2017-05-15 22:26:22 UTC
I think it's important to keep bumping the version so KDE know it's an issue in latest version.

Still broken in KMail 5.2.3 from KDE backports (http://www.kubuntu.org/news/plasma-bugfix-releases-frameworks-selected-app-updates-now-available-in-backports-ppa-for-zesty-and-xenial/)
Comment 18 Tristan Miller 2017-05-16 11:42:18 UTC
(In reply to Tom Chiverton from comment #17)
> I think it's important to keep bumping the version so KDE know it's an issue
> in latest version.

That will make it harder for the developers to narrow down which commit introduced the bug.  If you know a feature was working in version x, and not working any more in version y, then one way of finding the cause of the bug is to review code that changed in the last (y-x) versions.  Keeping y low is therefore of great benefit.

If you want to confirm that an issue hasn't yet been fixed, why not just post a comment?
Comment 19 Tom Chiverton 2017-05-16 18:19:40 UTC
There's no need to keep the version number low to help find the issue by giving the first breaking version.

We already found the problematic commit *3 years ago* : https://bugs.kde.org/show_bug.cgi?id=339576#c3 

The problem is getting anyone at KDE to notice that a core feature of a flag ship part of the suite is broken. And has been for years.
Saying it's a bug in the latest version helps there I think.
Comment 20 Tom Chiverton 2017-06-09 21:13:04 UTC
Fixed by today's KDE Neon update to KDE 17.04.2
Comment 21 Andreas K. Huettel 2017-06-17 14:12:48 UTC
Definitely not fixed in 17.04.2, symptoms remain exactly the same.
Comment 22 Tom Chiverton 2017-06-17 22:54:31 UTC
Ack. Now broken again. Kmail 4:17.04.2-0neon+16.04+xenial+build21
Comment 23 Anthony Messina 2017-07-29 15:26:31 UTC
Confirmed I can't add a top level folder with kmail-17.04.1-3.fc26.x86_64 (server cyrus-imapd-3.0.2-4.fc26.x86_64)
Comment 24 Daniel Vrátil 2017-09-08 15:12:17 UTC
Git commit 97a191a5df7b307c70e662996c4846d3d586ff61 by Daniel Vrátil.
Committed on 08/09/2017 at 15:09.
Pushed by dvratil into branch 'Applications/17.08'.

LIST: correctly return mimetypes for all Collections

LIST was only returning mimetypes for Collections that were resolved in the
initial filter pass. All Collections that were resolved in the second pass
to complete the tree were missing mimetypes, because their IDs were not
passed to the mimetype query. This in included mainly Collections that
don't match the initial mimetype filter, like top-level Collections.

This caused, among other things, KMail to refuse to create Collections
under the top-level Collection, because the top-level Collections did
not match KMail's mimetype filter (inode/directory).
FIXED-IN: 5.6.2

M  +1    -0    src/server/handler/list.cpp

https://commits.kde.org/akonadi/97a191a5df7b307c70e662996c4846d3d586ff61
Comment 25 Tom Chiverton 2017-09-08 23:18:18 UTC
Did this make Neon 17.08.1 ?